--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "engines": {
-    "node":"22.17.0"
+    "node": "22.17.0"
   },
   "name": "portfolio",
   "version": "1.0.0",
@@ -11,10 +11,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-
-
-
-  
   "description": "",
   "dependencies": {
     "connect-flash": "^0.1.1",
@@ -27,5 +23,8 @@
     "joi": "^17.13.3",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^4.1.15"
   }
 }
