--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "gsap": "^3.14.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^6.17.0",
